Improve visibility on searchbar and fix minor issue on header sizing

--- a/src/components/CustomHeader/CustomHeader.scss
+++ b/src/components/CustomHeader/CustomHeader.scss
@@ -3,6 +3,7 @@
 .header-item {
     position: relative;
     height: 100vh;
+    width: 100vw;
     background-color: black;
     
     .secondary-backdrop {
@@ -24,7 +25,7 @@
         filter: brightness(50%);
         object-fit: cover;
         height: 100vh;
-        width: 100vw;
+        width: 100%;
     }
 
     .container-carousel-details {
